데이터 스크래핑

--- a/curse_filtering.ipynb
+++ b/curse_filtering.ipynb
@@ -6,7 +6,7 @@
       "name": "curse_filtering.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/hwon-n/section4_project/blob/main/curse_filtering.ipynb",
-      "authorship_tag": "ABX9TyPnLuKj+fufeX0OKId5rjIQ",
+      "authorship_tag": "ABX9TyOzInzvxDbAI+Rkn65J49f0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,11 +52,11 @@
         "pip install beautifulsoup4"
       ],
       "metadata": {
-        "id": "e1hyOHIfS8n6",
-        "outputId": "901d6a5a-ceb4-463f-a4db-fbc9377db884",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e1hyOHIfS8n6",
+        "outputId": "901d6a5a-ceb4-463f-a4db-fbc9377db884"
       },
       "execution_count": 6,
       "outputs": [
@@ -163,24 +163,41 @@
         "    for i in title:\n",
         "      i = i.get_text()\n",
         "      i = i[5:]\n",
-        "      titles.append(i.strip())"
+        "      i = i.strip()\n",
+        "      if len(i) > 2:\n",
+        "        titles.append(i)"
       ],
       "metadata": {
         "id": "SdGImg5SoRfs"
       },
-      "execution_count": 36,
+      "execution_count": 50,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "titles"
+        "len(titles)"
       ],
       "metadata": {
-        "id": "Zg-gdtm5S2VV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zg-gdtm5S2VV",
+        "outputId": "602cd2a6-30ec-471d-e7ad-6d296a62522a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1339"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -190,18 +207,18 @@
         "path = '/content/drive/MyDrive/inven_data.txt'\n",
         "with open(path, 'w', encoding = 'utf-8') as f:\n",
         "  for title in titles:\n",
-        "    f.write(title)\n",
+        "    f.write(title+ '|1\\n')\n",
         "\n",
         "print('저장 완료')"
       ],
       "metadata": {
-        "id": "uPZyrvxSUOPx",
-        "outputId": "926f0d97-b261-48cc-f622-cf5a1e915c7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uPZyrvxSUOPx",
+        "outputId": "7a3a1801-bb6e-4399-9a87-2ff75370ec81"
       },
-      "execution_count": 43,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
